# EquiLens

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  debug_resume.py  deploy-docker.ps1  docker-compose.yml  equilens_cli.py  fix_emoji.py  package.json  pyproject.toml  pyrightconfig.json  setup-docker-dev.ps1  setup-docker-local.ps1  setup-docker.ps1  setup.bat  setup.ps1  test_dynamic_concurrency.py  test_enhanced_audit_fixes.py  test_enhanced_features.py  test_eta_functionality.py  test_progress.json  test_resume_cli.py  test_signing.txt  validate_customization.py  validate_enhanced_auditor.py  verify_setup.py  verify_web_ui.py  wrangler.toml
.github/workflows/: deploy-pages.yml  docker-publish.yml
data/: telemetry.json
data/jobs/: equilens_jobs.db
docs/: CONFIGURATION_GUIDE.md  DASHBOARD.md  EXECUTION_GUIDE.md  MCP_SERVERS.md  OLLAMA_SETUP.md  ONE_CLICK_SETUP.md  PROJECT_ORGANIZATION.md  QUICKSTART.md  README.md  RECOVERY_NOTES.md  SCHEMA_SUMMARY.md  ppt.md
docs/analytics/: ADVANCED_ANALYTICS_GUIDE.md  ANALYTICS_IMPROVEMENTS_COMPLETE.md  ANALYTICS_READY.md  CLI_ANALYTICS_FIX_COMPLETE.md  FLEXIBLE_ANALYTICS_COMPLETE.md  FLEXIBLE_ANALYTICS_REFERENCE.md  INTERACTIVE_ANALYTICS_GUIDE.md  LLM_DATA_FLOW.md  MULTI_CATEGORY_QUICK_REFERENCE.md  N_CATEGORY_SUPPORT_COMPLETE.md  QUICK_REFERENCE.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  BACKEND_ARCHITECTURE.md  CLI_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_ARCHITECTURE.md
docs/archived/: ONE_CLICK_SETUP.md  RECOVERY_NOTES.md
docs/auditing/: AUDITING_MECHANISM.md  ENHANCED_AUDITOR_DEFAULT.md  EXISTING_OLLAMA_GUIDE.md  OLLAMA_FLEXIBLE_SETUP.md  OLLAMA_SETUP.md  SMART_IMAGE_MANAGEMENT.md  VOLUME_MANAGEMENT.md
docs/docker/: CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER_ATTESTATION_SETUP.md  DOCKER_BUILD_FIX.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_BUILD_QUICK_REF.md  DOCKER_CHECKLIST.md  DOCKER_CONFIG_GUIDE.md  DOCKER_CONFIG_QUICK.md  DOCKER_DEPLOY_GUIDE.md  DOCKER_DEPLOY_QUICKREF.md  DOCKER_FIXES_COMPLETE.md  DOCKER_HUB_DEPLOYMENT.md  DOCKER_IMAGE_NAMING_FIX.md  DOCKER_NETWORKING_FIX.md  DOCKER_README.md  DOCKER_SETUP.md  DOCKER_SETUP_COMPARISON.md  DOCKER_SETUP_COMPLETE.md  DOCKER_SIMPLE.md  DOCKER_SIMPLIFIED_SETUP.md  DOCKER_SIMPLIFIED_SUMMARY.md  ENVIRONMENT_VARIABLE_LOGIC.md  SIMPLIFIED_OLLAMA_CONFIG.md  SMART_OLLAMA_CONFIG.md  SMART_OLLAMA_CONFIG_COMPLETE.md
docs/misc/: CLEANUP_SUMMARY.md  CLI_FIXES.md  CODE_ANALYSIS_REPORT.md  KEYBOARD_SHORTCUTS.md  OLLAMA_CHEATSHEET.md  READY_TO_PUBLISH.md  RECOVERY_NOTES.md  REPORT.md  SCRIPT_REORGANIZATION_PLAN.md
docs/setup/: CONFIGURATION_GUIDE.md  EXECUTION_GUIDE.md  GRADIO_QUICKSTART.md  NEW_FEATURES.md  PORT_FLEXIBILITY_COMPLETE.md  PORT_MANAGEMENT.md  QUICK_START.md  SETUP_COMPLETE.md  SETUP_DOCKER_LOCAL_CHANGES.md  SETUP_IMPROVEMENTS.md  SETUP_SCRIPTS_COMPARISON.md  SETUP_SCRIPTS_GUIDE.md  SMART_CONFIG_IMPLEMENTATION.md  SMART_CONFIG_QUICKREF.md  SMART_SETUP_COMPLETE.md  SMART_SETUP_GUIDE.md  TROUBLESHOOTING_SETUP.md  UV_SCRIPTS_GUIDE.md
docs/superpowers/plans/: 2026-05-18-dashboard.md
docs/superpowers/specs/: 2026-05-18-flask-dashboard-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
infra/: .dockerignore  Dockerfile  README.md  docker-compose.full-stack.yml  docker-compose.yml  equilens_cli.py
public/: README.md  _headers  _redirects  index.html  manifest.json  robots.txt  sitemap.xml  sw.js
public/assets/: app.js  styles.css
scripts/: README.md  check_ollama.py  extract_version.py
scripts/install/: README.md  setup-docker.ps1  setup-docker.sh  setup.ps1
scripts/setup/: ollama-setup-fixed.ps1  ollama-setup.ps1  ollama-setup.sh  setup-docker-local.ps1  verify_setup.py  verify_web_ui.py
scripts/tools/: README.md  demo_eta.py  mock_ollama.py  quick_setup.py  reorg_docs.ps1  test_eta_integration.py  test_eta_system.py  test_multi_prompt_eta.py  test_smart_ollama_config.py  validate_config.py
src/Phase1_CorpusGenerator/: CITATION.cff  README.md  __init__.py  corpus_metadata.json  generate_corpus.py  package_for_zenodo.ps1  switch_comparison.py  test_config.py  word_lists.json  word_lists_schema.json
src/Phase2_ModelAuditor/: README.md  __init__.py  audit_model.py  audit_model_backup.py  audit_model_fixed.py  enhanced_audit_model.py  run_both_auditors.py
src/Phase3_Analysis/: __init__.py  analytics.py  analyze_results.py  enhanced_analyzer.py
src/equilens/: __init__.py  __main__.py  backend_server.py  backup.py  cli.py  gradio_app.py  gradio_ui.py  ollama_logger.py  start_all.py  telemetry.py  tui.py  web.py  web_ui.py
src/equilens/backend/: __init__.py  api.py  database.py  export.py  jobs.py
src/equilens/core/: __init__.py  docker.py  gpu.py  manager.py  ollama_config.py  ports.py
src/equilens/dashboard/: routes.py
src/equilens/dashboard/static/: app.js  style.css
src/equilens/dashboard/templates/: analyze.html  audit.html  base.html  dashboard.html  generate.html  jobs.html  results.html
src/tools/: README.md  demo_eta.py  test_multi_prompt_eta.py
tests/: README.md  conftest.py  test_configurations.py  test_enhanced_customization.py  test_enhanced_features.py  test_web_ui_components.py  validate_customization.py  validate_enhanced_auditor.py
tests/integration/: test_dynamic_concurrency.py  test_enhanced_audit_fixes.py  test_resume_cli.py
tests/unit/: test_backup.py  test_dashboard_routes.py  test_eta_functionality.py  test_interactive_eta.py
