[project]
name = "equilens"
version = "2.1.0"
description = "Black-box AI bias detection framework for SLMs and LLMs via prompt engineering"
readme = "README.md"
authors = [
    { name = "VKrishna04", email = "krishnagsvv@gmail.com", url = "https://vkrishna04.github.io" }
]
license = { text = "Apache-2.0" }
keywords = ["ai", "bias", "detection", "audit", "llm", "slm", "language-models", "bias-audit", "fairness", "transparency", "accountability", "ethics", "prompt-engineering", "black-box-testing", "responsible-ai", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    # Core — required for CLI and pipeline
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "jsonschema>=4.17.0",
    "colorama>=0.4.6",
    "psutil>=7.0.0",
    # CLI
    "rich>=13.0.0",
    "typer>=0.9.0",
    # Web UI + REST backend
    "gradio>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    # Analytics + visualisation
    "matplotlib>=3.6.0",
    "seaborn>=0.13.2",
    "plotly>=5.15.0",
    "scipy>=1.16.1",
    # Async HTTP
    "aiohttp>=3.12.15",
    # Text NLP (Phase 2 enhanced auditor)
    "spacy>=3.8.11",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
ml = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.21.0",
]
viz = [
    "wordcloud>=1.9.0",
    "textstat>=0.7.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://equilens.vkrishna04.me"
Repository = "https://github.com/Life-Experimentalist/EquiLens.git"
Documentation = "https://github.com/Life-Experimentalist/EquiLens/docs"
Issues = "https://github.com/Life-Experimentalist/EquiLens/issues"

[project.scripts]
equilens = "equilens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/equilens",
    "src/Phase1_CorpusGenerator",
    "src/Phase2_ModelAuditor",
    "src/Phase3_Analysis",
]

[tool.hatch.build.targets.wheel.shared-data]
# Bundle word lists and schema alongside the package
"src/Phase1_CorpusGenerator/word_lists.json" = "share/equilens/word_lists.json"
"src/Phase1_CorpusGenerator/word_lists_schema.json" = "share/equilens/word_lists_schema.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "data/",
    "docs/",
    "tests/",
    "pyproject.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE.md",
    "CLAUDE.md",
]

[tool.uv]
# Fix hardlink issues on Windows and cross-filesystem scenarios
link-mode = "copy"
# Cache configuration for better performance
cache-dir = ".uv-cache"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments (individual codes overridden in ignore)
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W293",  # blank line contains whitespace
    "E402",  # module level import not at top of file
    "PTH",   # pathlib style — codebase uses os.path throughout, migrate separately
    "ARG001", # unused function arguments — many intentional signatures
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"scripts/**/*.py" = ["F401"]  # verification scripts do intentional test imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=equilens",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
